[gd_scene load_steps=17 format=3 uid="uid://docu_scene_v3_fixed_layout"]

[ext_resource type="Script" path="res://scene/dokumentation/dokumentation.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://c20dfha2jb4q3" path="res://icon.svg" id="2_icon"]

[sub_resource type="Shader" id="Shader_blur"]
code = "shader_type canvas_item;
uniform float lod: hint_range(0.0, 5.0) = 3.0;
uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_linear_mipmap;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_blur"]
shader = SubResource("Shader_blur")
shader_parameter/lod = 2.5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_modal_bg"]
bg_color = Color(0.1, 0.1, 0.12, 0.95)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0, 0.8, 0.5, 0.5)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_header"]
bg_color = Color(0.05, 0.05, 0.08, 0.95)
border_width_bottom = 2
border_color = Color(0.0, 0.8, 0.5, 0.5)
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 24
font_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_primary"]
bg_color = Color(0.0, 0.6, 1.0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel_glass"]
bg_color = Color(0.08, 0.08, 0.12, 0.6)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.3, 0.4, 0.5)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_section"]
font_size = 18
font_color = Color(0.0, 0.8, 0.5, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_list_bg"]
bg_color = Color(0.05, 0.05, 0.07, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_counter_btn"]
bg_color = Color(0.0, 0.0, 0.0, 0.5)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_counter_btn_hover"]
bg_color = Color(0.0, 0.8, 0.5, 0.1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0, 0.8, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_counter"]
font_size = 42
font_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_item_socket"]
bg_color = Color(0.1, 0.1, 0.15, 1)
border_width_left = 4
border_color = Color(0.0, 0.6, 1.0, 1)
corner_radius_top_right = 4
corner_radius_bottom_right = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_defect_item"]
bg_color = Color(0.12, 0.12, 0.15, 1)
border_width_left = 4
border_color = Color(1, 0.4, 0.4, 1)
corner_radius_top_right = 4
corner_radius_bottom_right = 4

[node name="Dokumentation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="BlurLayer" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_blur")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ViewSelect" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="ViewSelect"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_modal_bg")

[node name="M" type="MarginContainer" parent="ViewSelect/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="ViewSelect/Panel/M"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="ViewSelect/Panel/M/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Dokumentation einsehen"
horizontal_alignment = 1

[node name="OptionCustomer" type="OptionButton" parent="ViewSelect/Panel/M/VBox"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
mouse_default_cursor_shape = 2
item_count = 2
selected = 0
popup/item_0/text = "Bitte Kunde wählen..."
popup/item_0/id = 0
popup/item_1/text = "Musterfirma GmbH"
popup/item_1/id = 1

[node name="BtnStart" type="Button" parent="ViewSelect/Panel/M/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_primary")
text = "Berichte laden"

[node name="ViewMain" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Header" type="PanelContainer" parent="ViewMain"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_header")

[node name="M" type="MarginContainer" parent="ViewMain/Header"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="HBox" type="HBoxContainer" parent="ViewMain/Header/M"]
layout_mode = 2

[node name="BtnBackToSelect" type="Button" parent="ViewMain/Header/M/HBox"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "<"

[node name="LabelTitle" type="Label" parent="ViewMain/Header/M/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "  Prüfberichte: Musterfirma GmbH"
label_settings = SubResource("LabelSettings_title")

[node name="BtnExportPDF" type="Button" parent="ViewMain/Header/M/HBox"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_primary")
text = "Als PDF drucken"

[node name="HBoxContent" type="HBoxContainer" parent="ViewMain"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="LeftCol" type="MarginContainer" parent="ViewMain/HBoxContent"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 30

[node name="PanelList" type="PanelContainer" parent="ViewMain/HBoxContent/LeftCol"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel_glass")

[node name="M" type="MarginContainer" parent="ViewMain/HBoxContent/LeftCol/PanelList"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxList" type="VBoxContainer" parent="ViewMain/HBoxContent/LeftCol/PanelList/M"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="ViewMain/HBoxContent/LeftCol/PanelList/M/VBoxList"]
layout_mode = 2
text = "Verfügbare Berichte"
label_settings = SubResource("LabelSettings_section")

[node name="ReportList" type="ItemList" parent="ViewMain/HBoxContent/LeftCol/PanelList/M/VBoxList"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_list_bg")
item_count = 3
item_0/text = "Halle 3 - 09.12.2025"
item_0/icon = ExtResource("2_icon")
item_1/text = "Bürogebäude A - 08.12.2025"
item_1/icon = ExtResource("2_icon")
item_2/text = "Werkstatt Süd - 01.12.2025"
item_2/icon = ExtResource("2_icon")

[node name="RightCol" type="MarginContainer" parent="ViewMain/HBoxContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="PanelReport" type="PanelContainer" parent="ViewMain/HBoxContent/RightCol"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel_glass")

[node name="M" type="MarginContainer" parent="ViewMain/HBoxContent/RightCol/PanelReport"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxOut" type="VBoxContainer" parent="ViewMain/HBoxContent/RightCol/PanelReport/M"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="HeaderReport" type="HBoxContainer" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut"]
layout_mode = 2

[node name="VBoxInfo" type="VBoxContainer" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/HeaderReport"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelReportTitle" type="Label" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/HeaderReport/VBoxInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 22
text = "Bitte Bericht auswählen..."

[node name="LabelReportDate" type="Label" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/HeaderReport/VBoxInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "-"

[node name="LabelSec4" type="Label" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut"]
layout_mode = 2
text = "Prüfergebnisse (Details per Klick)"
label_settings = SubResource("LabelSettings_section")

[node name="HBoxStats" type="HBoxContainer" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Btn230" type="Button" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/HBoxStats"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_counter_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_counter_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_counter_btn_hover")

[node name="VBox" type="VBoxContainer" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/HBoxStats/Btn230"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/HBoxStats/Btn230/VBox"]
layout_mode = 2
text = "230V Steckdosen"
horizontal_alignment = 1

[node name="LabelCount230" type="Label" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/HBoxStats/Btn230/VBox"]
layout_mode = 2
text = "-"
label_settings = SubResource("LabelSettings_counter")
horizontal_alignment = 1

[node name="Btn400" type="Button" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/HBoxStats"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_counter_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_counter_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_counter_btn_hover")

[node name="VBox" type="VBoxContainer" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/HBoxStats/Btn400"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/HBoxStats/Btn400/VBox"]
layout_mode = 2
text = "400V Steckdosen"
horizontal_alignment = 1

[node name="LabelCount400" type="Label" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/HBoxStats/Btn400/VBox"]
layout_mode = 2
text = "-"
label_settings = SubResource("LabelSettings_counter")
horizontal_alignment = 1

[node name="BtnTotal" type="Button" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/HBoxStats"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_counter_btn")
theme_override_styles/hover = SubResource("StyleBoxFlat_counter_btn_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_counter_btn_hover")

[node name="VBox" type="VBoxContainer" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/HBoxStats/BtnTotal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/HBoxStats/BtnTotal/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0, 0.96, 0.83, 1)
text = "GESAMT"
horizontal_alignment = 1

[node name="LabelCountTotal" type="Label" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/HBoxStats/BtnTotal/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0, 0.96, 0.83, 1)
text = "-"
label_settings = SubResource("LabelSettings_counter")
horizontal_alignment = 1

[node name="LabelSec5" type="Label" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut"]
layout_mode = 2
text = "Dokumentierte Mängel"
label_settings = SubResource("LabelSettings_section")

[node name="ScrollDefects" type="ScrollContainer" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut"]
layout_mode = 2
size_flags_vertical = 3
vertical_scroll_mode = 2

[node name="DefectList" type="VBoxContainer" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/ScrollDefects"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="DefectTemplate" type="PanelContainer" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/ScrollDefects/DefectList"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_defect_item")

[node name="M" type="MarginContainer" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/ScrollDefects/DefectList/DefectTemplate"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/ScrollDefects/DefectList/DefectTemplate/M"]
layout_mode = 2

[node name="LabelText" type="Label" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/ScrollDefects/DefectList/DefectTemplate/M/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mangel Text"
autowrap_mode = 2

[node name="LabelSev" type="Label" parent="ViewMain/HBoxContent/RightCol/PanelReport/M/VBoxOut/ScrollDefects/DefectList/DefectTemplate/M/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
text = "SCHWER"

[node name="ViewSocketDetails" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Header" type="PanelContainer" parent="ViewSocketDetails"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_header")

[node name="M" type="MarginContainer" parent="ViewSocketDetails/Header"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="HBox" type="HBoxContainer" parent="ViewSocketDetails/Header/M"]
layout_mode = 2

[node name="BtnBackToMain" type="Button" parent="ViewSocketDetails/Header/M/HBox"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "<"

[node name="LabelDetailTitle" type="Label" parent="ViewSocketDetails/Header/M/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "  Einzelnachweis: 230V Steckdosen"
label_settings = SubResource("LabelSettings_title")

[node name="Content" type="MarginContainer" parent="ViewSocketDetails"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="PanelList" type="PanelContainer" parent="ViewSocketDetails/Content"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel_glass")

[node name="M" type="MarginContainer" parent="ViewSocketDetails/Content/PanelList"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Scroll" type="ScrollContainer" parent="ViewSocketDetails/Content/PanelList/M"]
layout_mode = 2
vertical_scroll_mode = 2

[node name="SocketList" type="VBoxContainer" parent="ViewSocketDetails/Content/PanelList/M/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="SocketTemplate" type="PanelContainer" parent="ViewSocketDetails/Content/PanelList/M/Scroll/SocketList"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_item_socket")

[node name="M" type="MarginContainer" parent="ViewSocketDetails/Content/PanelList/M/Scroll/SocketList/SocketTemplate"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBox" type="HBoxContainer" parent="ViewSocketDetails/Content/PanelList/M/Scroll/SocketList/SocketTemplate/M"]
layout_mode = 2

[node name="ID" type="Label" parent="ViewSocketDetails/Content/PanelList/M/Scroll/SocketList/SocketTemplate/M/HBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
text = "ID-042"

[node name="Loc" type="Label" parent="ViewSocketDetails/Content/PanelList/M/Scroll/SocketList/SocketTemplate/M/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Werkbank links, unter Verteilerkasten"

[node name="Status" type="Label" parent="ViewSocketDetails/Content/PanelList/M/Scroll/SocketList/SocketTemplate/M/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.9, 0.5, 1)
text = "PRÜFUNG OK"